<resources>
    <string name="app_name">QuizX</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Display name</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>

    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_name">Name must be >3 characters</string>
    <string name="register_failed">Registration failed</string>
    <string name="login_failed">Login failed</string>

    <string name="ranking_pos">%1$d</string>
    <string name="ranking_score">%1$d pts</string>
</resources>